# quick_vllm

./: .gitignore  README.md  example_usage.py  example_usage_bleu.py  example_usage_system_prompt.py  pyproject.toml
numpy/: __init__.py
openai/: __init__.py
quick_vllm/: README.md  __init__.py  _config.py  api.py  cache.py  example_usage.py  metrics.py  trl_client.py  utils.py  vllm_args.py  vllm_client.py
quick_vllm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
quick_vllm/tests/: test_cache.py
